# matrix23

./: .gitignore  CMakeLists.txt  Notes.txt  README.md
include/matrix23/: blas.hpp  matmul.hpp  matops.hpp  matrix.hpp  matrix1.hpp  packer.hpp  ran250.h  shaper.hpp  subscriptors.hpp  symmetry.hpp  vector.hpp
src/: blas.cpp  ran250.cpp
unittests/: CMakeLists.txt  benchmarks.cpp  blas.cpp  initvm.cpp  main.cpp  matrix.cpp  matrix1.cpp  matrix_algebra.cpp  packers.cpp  vector.cpp
